# PROFusion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  requirements.txt  run_profusion.py
assets/: install_from_source.md
configs/controller_config/: default.yaml
configs/data_config/: eth3d.yaml  fastcamo.yaml  femtobolt.yaml
data_loader/: __init__.py  base_loader.py  eth3d.py  fastcamo.py  femtobolt.py
pose_regression/: __init__.py  inference.py  model.py  run.py
pose_regression/modules/: __init__.py  base_model.py  basic_blocks.py  multiview_blocks.py  patch_embed.py  pose_head.py
pose_regression/modules/pos_embed/: pos_embed.py
pose_regression/utils/: cropping.py  geometry.py  image.py  transforms.py
randomized_optimization/include/: data_types.h  opt_fus.h
randomized_optimization/src/: bindings.cpp  opt_fus.cpp  pose_estimation.cpp  surface_measurement.cpp
randomized_optimization/src/cuda/: extract_pointcloud.cu  pose_estimation.cu  surface_measurement.cu  surface_reconstruction.cu
randomized_optimization/src/cuda/include/: common.h
